...
          ) : null,
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: "Groups",
          headerTitle: "Groups",
          tabBarIcon: ({ focused }) => <TabIcon label="G" focused={focused} />,
        }}
      />
      <Tabs.Screen
        name="activity"
...
